# GenAI_session10

./: .env.example  1.0langsmith_tracing.py  1.1langsmith_langgraph_tracing.py  1.1langsmith_tracing_leadgen.py  1.2langsmith_langgraph_qna.py  2.0langfuse_demo.py  2.1langfuse_research_demo.py  3.0open_telemetry.py  3.1open_tel_ex2.py  3.2open_tel_ex3.py  4.a_b_testing.py  4.a_b_testing_langsmith.py  README.md  dataset.csv  pyproject.toml
